Bug 160616 - SUMPRODUCT calculation is broken in some cases, if the ranges are beyond the last cell with data
Summary: SUMPRODUCT calculation is broken in some cases, if the ranges are beyond the ...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
24.8.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:24.8.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Calc-Function
  Show dependency treegraph
 
Reported: 2024-04-10 15:08 UTC by m_a_riosv
Modified: 2024-04-12 11:16 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Sample to reproduce the issue (34.29 KB, application/vnd.oasis.opendocument.spreadsheet)
2024-04-10 15:08 UTC, m_a_riosv
Details

Note You need to log in before you can comment on or make changes to this bug.
Description m_a_riosv 2024-04-10 15:08:32 UTC
Description:
After tdf#159687 improvement to shortcut the calculations with SUMPRODUCT at the last cell with data, is some cases the calculation is now broken.
It returns #VALUE while the calculation it's fine with 24.2.

Regression with
Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 42f6e89d5e6458966de452af2978f206115394af
CPU threads: 16; OS: Windows 10.0 Build 22631; UI render: Skia/Raster; VCL: win
Locale: es-ES (es_ES); UI: en-US
Calc: CL threaded


Works fine before the change with:
Version: 24.2.2.2 (X86_64) / LibreOffice Community
Build ID: d56cc158d8a96260b836f100ef4b4ef25d6f1a01
CPU threads: 16; OS: Windows 10.0 Build 22631; UI render: default; VCL: win
Locale: es-ES (es_ES); UI: en-US
Calc: CL threaded

Steps to Reproduce:
Open attached file.

Actual Results:
.

Expected Results:
.


Reproducible: Always


User Profile Reset: Yes

Additional Info:
.
Comment 1 m_a_riosv 2024-04-10 15:08:59 UTC
Created attachment 193603 [details]
Sample to reproduce the issue
Comment 2 m_a_riosv 2024-04-10 15:12:55 UTC
Perhaps a hard recalc is needed to view the issue.
Comment 3 raal 2024-04-10 15:30:58 UTC
Confirm with Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: f3d0a184c4da57907a1fcf1ed784340be7d974d6
CPU threads: 4; OS: Linux 6.5; UI render: default; VCL: gtk3
Locale: cs-CZ (cs_CZ.UTF-8); UI: en-US
Calc: threaded Jumbo
Comment 4 Balázs Varga 2024-04-10 15:52:55 UTC
(In reply to raal from comment #3)
> Confirm with Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
> Build ID: f3d0a184c4da57907a1fcf1ed784340be7d974d6
> CPU threads: 4; OS: Linux 6.5; UI render: default; VCL: gtk3
> Locale: cs-CZ (cs_CZ.UTF-8); UI: en-US
> Calc: threaded Jumbo

Thanks for the report, will check it soon.
Comment 5 Commit Notification 2024-04-11 14:13:11 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/969ddf72824942be9755a8d14482d6549a2231ce

tdf#160616 - Fix SUMPRODUCT calculation is broken in some cases

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Gabor Kelemen (Collabora) 2024-04-12 09:11:01 UTC
Tested in

Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: f61ffdfa1a56b1b1fa1aa4f269477e1d1d475955
CPU threads: 15; OS: Windows 10.0 Build 19045; UI render: default; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: default

Now Data - Calculate - Recalculate Hard does not result in #VALUE errors.